<?xml version="1.0"?>
<package>
  <name>blinky_description</name>
  <version>0.1.0</version>
  <description>URDF for Blinky</description>

  <maintainer email="markrossetti@gmail.com">mrosse3</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/blinky_description</url> -->

  <author email="markrossetti@gmail.com">mrosse3</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>
</package>
